sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: type mismatch;
 found   : Unit
 required: Boolean
	while (x = true)
                 ^