sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var x:Boolean = true
	do
		for (i <- 0 to getNombreValeurs() -2) {
			if (plusPetit(i+1,i)) {
			echange(i,i+1) } else {x = false}
	}
	while (x = true)
}
